# typecount

./: .gitignore  README.md  pyproject.toml  typecount.py  typing_count.csv
.Jules/: palette.md
.jules/: bolt.md  sentinel.md
data/: typing_count.csv  typing_count_enhanced.csv
notebooks/: typing_plot.ipynb
src/: __init__.py  app.py
src/typecount/: app.py
tests/: test_app.py
