[project]
name = "typecount"
version = "0.4.0"
description = "An enhanced typing counter application with key statistics and visualization"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pynput>=1.7.7",
]

[project.scripts]
typecount = "typecount.app:main"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
typecount = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pynput = ">=1.8.1,<2"
